--- a/tryy.html
+++ b/tryy.html
@@ -4,6 +4,4 @@
 <title> basic HTML structure </title>
 </head>
 <body>
-hi my name is shaurya and im learning html and website development
-</body>
-</html>
+<center>
