--- a/the_end.html
+++ b/the_end.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Navya is leaving ;( </title>
+<title> Navya is leaving ;(  1.1 admin </title>
 </head>
 <body>
 <center>
