--- a/cusine.html
+++ b/cusine.html
@@ -31,6 +31,14 @@
             box-shadow: 5px 5px 10px rgb(0, 0, 255);
             }
 
+                     div.fixed {
+            position: fixed;
+            right: 20px;
+            left: 50px;
+            width: 300px;
+            border: 3px solid rgb(233, 156, 134);
+         }
+
              p {
             background-color: rgb(241, 201, 255);
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
@@ -60,6 +68,9 @@
     </head>
     <body>
         <h1> indian cusine </h1>
+        <div class="fixed">
+        <p> indian cuisine </p>
+        </div>
         <hr>
         <p> Indian cuisine is known for its rich flavors, diverse ingredients, and regional specialties. It includes a wide variety of dishes, from spicy curries to sweet desserts. These are some names of indian food </p>
         <img src="https://as2.ftcdn.net/jpg/04/87/53/97/1000_F_487539705_jRn1jyiM6HMMHHG5rrKgNJ0zRhHUiJCb.jpg" alt="Indian Cuisine" width="450">
